updated js and css html links

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="src/styles.css" />
+    <link rel="stylesheet" href="src/style.css" />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
 </head>
@@ -65,6 +65,6 @@
       </div>
     </div>
    </div>
-  <script src="src/index.js"></script>  
+  <script src="src/script.js"></script>  
  </body>
 </html>
