added open source link

--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
       </div>
       </div>
     </div>
+    <small>
+      <a href="https://github.com/jureefitz/weather-app-repo" target="_blank">Open-source code</a>, by Juree Fitzgerald
+    </small>
    </div>
   <script src="src/script.js"></script>  
  </body>
