--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         </div>
           <div class="col-2">
-            <input type="submit" class="btn btn-outline-info shadow-sm"
+            <input type="submit" id="search-button" class="btn btn-outline-info shadow-sm"
             value ="search"
             />
         </div>
