changed weather img and updated html and css classes

--- a/index.html
+++ b/index.html
@@ -49,17 +49,19 @@
 
     <div class="row">
     <div class="col-6">
-        <span class="emoji-image">🌥</span>
+      <div class="clearfix">
+        <img src="https://ssl.gstatic.com/onebox/weather/64/rain_light.png" alt="rain" />
         <span class="temperature" id="temperature"></span>
         <span class="units">
           <a href="#" id="fahrenheit">°F</a> |
           <a href="#" id="celsius">°C</a>
         </span>
+      </div>
     </div>
 
     <div class="col-6">
         <span class="climate">
-            Feels Like: <span id="feels-like" ></span> ℉ <br />Humidity: <span id="humidity"></span>% <br />Wind: <span id="wind"></span> mph
+            Feels Like: <span id="feels-like" ></span>℉<br />Humidity: <span id="humidity"></span>% <br />Wind: <span id="wind"></span> mph
         </span>
       </div>
       </div>
