--- a/index.html
+++ b/index.html
@@ -49,14 +49,12 @@
 
     <div class="row">
     <div class="col-6">
-      <div class="clearfix">
-        <img src="https://ssl.gstatic.com/onebox/weather/64/rain_light.png" alt="rain" />
+        <img src="" alt="" id="emoji-icon"/>
         <span class="temperature" id="temperature"></span>
         <span class="units">
-          <a href="#" id="fahrenheit">°F</a> |
-          <a href="#" id="celsius">°C</a>
+          <a href="#" id="fahrenheit">°F</a> |<a href="#" id="celsius">°C</a>
         </span>
-      </div>
+      
     </div>
 
     <div class="col-6">
