--- a/index.html
+++ b/index.html
@@ -63,20 +63,7 @@
         </span>
       </div>
       </div>
-      <div class="weather-forecast">
-        <div class="row">
-          <div class="col-2">
-            <div class="weather-forecast-date">Thu</div>
-            <img src="https://openweathermap.org/img/wn/50n@2x.png" alt=""
-            width="42"
-            >
-            <div class="weather-forecast-temp">
-              <span class="weather-forecast-temp-max">18º</span>
-              <span class="weather-forecast-temp-min">12º</span>
-            </div>
-          </div>
-        </div>
-      </div>
+      <div class="weather-forecast" id="forecast"></div>
     </div>
     <small>
       <a href="https://github.com/jureefitz/weather-app-repo" target="_blank">Open-source code</a>, by Juree Fitzgerald
