Removed celsius conversion, updated CSS and HTML

--- a/index.html
+++ b/index.html
@@ -45,15 +45,14 @@
 
     <h1 id="city-element"></h1>
     <h2 id="description"></h2>
+    Last Searched:
     <h3 id="date-time"></h3>
 
     <div class="row">
     <div class="col-6">
         <img src="" alt="" id="emoji-icon"/>
         <span class="temperature" id="temperature"></span>
-        <span class="units">
-          <a href="#" id="fahrenheit">°F</a> |<a href="#" id="celsius">°C</a>
-        </span>
+        <span class="units">°F</span>
       
     </div>
 
